--- a/style.css
+++ b/style.css
@@ -1,20 +1,12 @@
 h1, p {
     text-align: center;
+    /* font-family: Georgia, serif; */
 }
 
 .nextpg {
     text-align: center;
 }
 
-.arrow {
-    display: inline-block;
-    width: 0;
-    height: 0;
-    border-left: 20px solid white;
-    border-top: 20px solid white;
-    border-right: 30px solid black;
-    border-bottom: 0px;
-}
 
 .arrow:hover {
     border-left: 40px solid black;
@@ -25,5 +17,50 @@ h1, p {
 }
 
 body {
-    background-image: url(Images/acell.avif);
+    height: 100vh; /*to cover viewport fully, position images at the bottom half*/
+    overflow: hidden; /* Disable scrolling */
+
+    background-image: 
+        url(Images/m1.jpg), /*top left*/
+        url(Images/m2.jpg), /*top right*/
+        url(Images/m3.jpg), /*left center*/
+        url(Images/m4.jpg), /*bottom center*/
+        url(Images/m5.jpg), /*bottom right*/
+        url(Images/background_cell_2.jpg);
+    background-size: 10%,10%,10%,10%,10%, cover;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+    background-position: 25% 50%, 25% 50%, 25% 50%, 25% 50%, 25% 50%, 0% 0%;
+    animation: moveUpDown 5s ease-in-out infinite, moveUpDown 5s ease-in-out infinite, moveUpDown 5s ease-in-out infinite, moveUpDown 5s ease-in-out infinite, moveUpDown 5s ease-in-out infinite, none;
+}
+
+@keyframes moveUpDown {
+    0% {
+        background-position: 25% 20%, 75% 30%, 25% 80%, 55% 70%, 85% 90%, 0% 0%; /* Image at the top */
+    }
+    50% {
+        background-position: 25% 30%, 75% 20%, 30% 70%, 55% 75%, 80% 88%, 0% 0%; /* Image moves to the bottom */
+    }
+    100% {
+        background-position: 25% 20%, 75% 30%, 25% 80%, 55% 70%, 85% 90%, 0% 0%; /* Image returns to the top */
+    }
+}
+
+button {
+    background: none;
+    border: none;
+    padding: 0 0;
+    position: center bottom;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.button:hover {
+    transform: scale(1.1);
+}
+
+.bottom_center {
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    border: none;
 }
