--- a/main_style.css
+++ b/main_style.css
@@ -7,6 +7,7 @@ html, body{
     height: 100%;
 }
 
+/*Gradient*/
 body {
     color: white;
     text-align: center;
@@ -28,6 +29,7 @@ header h2 {
     padding-top: 50px;
 }
 
+/*Navigation Bar*/
 .navbar {
     /* position: sticky; */
     position: fixed;
@@ -69,8 +71,6 @@ button.li-container {
     appearance: none;
     -webkit-appearance: none;
 }
-
-
 
 .li-container:hover {
     background-color: black;
@@ -116,6 +116,7 @@ button.li-container {
 }
 
 
+/*Main Body*/
 .section-container {
     display: flex;
     flex-direction: column;
@@ -214,6 +215,7 @@ img {
     height: 80px;
 }
 
+/*Footer*/
 footer {
     background-color: rgb(44, 223, 184);
     padding: 50px;
