--- a/style.css
+++ b/style.css
@@ -3,22 +3,35 @@
     padding: 0;
 }
 
+html {
+    height: 100vh;
+    overflow: hidden;
+}
+
 body {
     height: 100vh;
     overflow: hidden;
     background-color: black;
 }
 
-h1, p{
+.text {
     position: absolute;
-    color: rgb(44, 223, 184);
-    top: 30%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* font-size: 80px; */
-    /* font-size: 500%; */
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+h1, p{
+    color: rgb(44, 223, 184);
     font-size: 5.208vw;
     font-family: 'Varela Round';
+    padding: 0em;
 }
 
 p {
@@ -27,14 +40,25 @@ p {
     text-align: center;
     text-shadow: none;
     color: rgb(44, 223, 184);
+    padding-bottom: 0.4em;
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 8vw;
+    }
+
+    p {
+        font-size: 4vw;
+    }
+
+    button {
+        font-size: 4vw;
+        width: 50%;
+    }
 }
 
 button {
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
     background: linear-gradient(90deg, #8D5ABF, rgb(44, 223, 184));
     background-clip: padding-box;
     color: black;
@@ -51,6 +75,12 @@ button {
 
     width: 18%;
     height: auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: normal;
 }
 
 button:hover {
